k3s/velaux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velaux-server
  namespace: vela-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: vela.butterflycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velaux-server
                port:
                  number: 8000
  tls:
    - hosts:
        - vela.butterflycluster.com
      secretName: default-cert
